Replaced template pics, modified styling a little bit also hosted site for demo

--- a/index.html
+++ b/index.html
@@ -48,22 +48,16 @@
     <h1 id="features">Features</h1>
     <div class="features">
         <div class="feature">
-            <img src="./images/heropic.jpg" alt="Hero Pic" height="300">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eos porro velit, possimus aliquid hic
-                magnam voluptatibus veniam consequuntur recusandae voluptate illum repellendus, corporis fuga ut
-                mollitia nulla animi! Exercitationem.</p>
+            <img src="./images/Calendar.png" alt="Hero Pic" height="300">
+            <p><strong>Effortless Appointment Booking:</strong><br><br> Simplified booking for clinics and patients with automated reminders, notifications, and follow-ups.</p>
         </div>
         <div class="feature">
-            <img src="./images/heropic.jpg" alt="Hero Pic" height="300">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eos porro velit, possimus aliquid hic
-                magnam voluptatibus veniam consequuntur recusandae voluptate illum repellendus, corporis fuga ut
-                mollitia nulla animi! Exercitationem.</p>
+            <img src="./images/Chat.png" alt="Hero Pic" height="300">
+            <p><strong>Seamless Communication:</strong><br><br> Integrated chat system for inquiries and secure file transfers between clinics and patients.</p>
         </div>
         <div class="feature">
-            <img src="./images/heropic.jpg" alt="Hero Pic" height="300">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eos porro velit, possimus aliquid hic
-                magnam voluptatibus veniam consequuntur recusandae voluptate illum repellendus, corporis fuga ut
-                mollitia nulla animi! Exercitationem.</p>
+            <img src="./images/Budget.png" alt="Hero Pic" height="300">
+            <p><strong>Budget Tracker:</strong><br><br> Patients can manage their dental treatment coverage and costs directly within the app.</p>
         </div>
     </div>
 
@@ -71,43 +65,43 @@
     <div class="pricingtiers">
         <div class="tier">
             <h2>Tier 1</h2>
-            <h3>$500</h3>
+            <h3>$180</h3>
             <hr>
             <p>per month</p>
-            <p>$120 annually</p>
+            <p>One-time<br>  $5000 installation fee</p>
             <button>BUY NOW!</button>
             <hr>
-            <p>1000 clients</p>
+            <p>8-20 users</p>
         </div>
         <div class="tier">
             <h2>Tier 2</h2>
-            <h3>$500</h3>
+            <h3>$220</h3>
             <hr>
             <p>per month</p>
-            <p>$120 annually</p>
+            <p>One-time<br>  $5000 installation fee</p>
             <button>BUY NOW!</button>
             <hr>
-            <p>1000 clients</p>
+            <p>20-50 users</p>
         </div>
         <div class="tier">
             <h2>Tier 3</h2>
-            <h3>$500</h3>
+            <h3>$270</h3>
             <hr>
             <p>per month</p>
-            <p>$120 annually</p>
+            <p>One-time<br> $5000 installation fee</p>
             <button>BUY NOW!</button>
             <hr>
-            <p>1000 clients</p>
+            <p>50+ users</p>
         </div>
         <div class="tier">
             <h2>Tier 3</h2>
-            <h3>$500</h3>
+            <h3>$25</h3>
             <hr>
             <p>per month</p>
-            <p>$120 annually</p>
+            <p>One-time<br>  $5000 installation fee</p>
             <button>BUY NOW!</button>
             <hr>
-            <p>1000 clients</p>
+            <p>per user</p>
         </div>
     </div>
 
