--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>50+ users</p>
         </div>
         <div class="tier">
-            <h2>Tier 3</h2>
+            <h2>Flex Tier</h2>
             <h3>$25</h3>
             <hr>
             <p>per month</p>
